--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedex-Profile! A01262284</title>
+    <title>Pokedex-User! A01262284</title>
 
     <!-- Google Icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/styles/universal.css">
-    <link rel="stylesheet" href="/styles/profile.css">
     <link rel="stylesheet" href="/styles/universal-mq.css">
 </head>
+
 <body>
     <!-- Header -->
     <header>
         <h1>
-            Jose Alfonso Clarito - Pokedex!
+            Jose Alfonso Clarito - You!
         </h1>
     </header>
 
@@ -48,50 +50,19 @@
 
     <!-- Main -->
     <main id="content">
-        <!-- Image -->
-        <figure id="pImg">
-            <img alt="<%= pokemon.name %>" src="<%= pokemon.sprites.other["official-artwork"].front_default %>">
-        </figure>
-
-        <!-- Name & Id-->
-        <h2 id="pIdentity">
-            <div id="pName"><%= pokemon.name.toUpperCase() %></div>
-            <div id="pID"><%= pokemon.id %></div>
-            <a id="pBuy" class="navlink-container"><span class="material-symbols-outlined">shopping_cart</span></a>
-        </h2>
-
-        <!-- Type  -->
-        <div id="pTypes">
-            <h3>Types</h3>
-            <% pokemon.types.forEach((elem) => { %>
-                <div class="types info"><%= elem.type.name.toUpperCase() %></div>
-            <% }) %>
+        <div>Welcome, 
+            <span>Username</span>
         </div>
 
-        <!-- Stats -->
-        <div id="pStats">
-            <h3 id="h3Stats">Stats</h3>
-            <% pokemon.stats.forEach((elem) => { %>
-                <div class="stats info">
-                    <div class="statname"><%= elem.stat.name.toUpperCase() %></div>
-                    <progress class="statpts" value="<%= elem.base_stat %>" max="255"><%= elem.base_stat %></progress>
-                </div>
-            <% }) %>
-        </div>
-
-        <!-- Abilities -->
-        <div id="pAbilities">
-            <h3>Abilities</h3>
-            <% pokemon.abilities.forEach((elem) => { %>
-                <div class="ables info"><%= elem.ability.name.toUpperCase() %></div>
-            <% }) %>
+        <div>
+            <span>Email</span>
         </div>
     </main>
 
     <!-- Footer -->
     <footer>
         <h5>
-            Copyright © FonseLULW; API from 
+            Copyright © FonseLULW; API from
             <a href="https://pokeapi.co">pokeAPI</a>
         </h5>
     </footer>
@@ -100,6 +71,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="/scripts/universal.js"></script>
     <script src="/scripts/events.js"></script>
-    <script src="/scripts/profile.js"></script>
+
 </body>
+
 </html>
