--- a/views/user.ejs
+++ b/views/user.ejs
@@ -12,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/styles/universal.css">
+    <link rel="stylesheet" href="/styles/user.css">
     <link rel="stylesheet" href="/styles/universal-mq.css">
 </head>
 
@@ -50,13 +51,23 @@
 
     <!-- Main -->
     <main id="content">
-        <div>Welcome, 
-            <span>Username</span>
+        <div class="greeting">
+            <div>Welcome,
+                <span class="username">
+                    <%= data.username %>
+                </span>
+            </div>
+
+            <div>
+                <span class="password">
+                    <%= data.email %>
+                </span>
+            </div>
         </div>
 
-        <div>
-            <span>Email</span>
-        </div>
+        <button id="browse">
+            Browse for Pokemon!
+        </button>
     </main>
 
     <!-- Footer -->
@@ -71,7 +82,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="/scripts/universal.js"></script>
     <script src="/scripts/events.js"></script>
-
+    <script src="/scripts/user.js"></script>
 </body>
 
 </html>
