--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
 main {
     padding: 0px;
     display: flex;
@@ -21,13 +24,13 @@ main {
 h2 {
     margin-top: 1rem;
     margin-bottom: 2rem;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Poiret One', cursive;
     font-size: 4rem;
     color: rgb(0, 0, 0);
 }
 
 #footnote {
-    font-family: 'Trebuchet MS';
+    font-family: 'Nanum Gothic', sans-serif;
     font-size: 1.5rem;
 }
 
@@ -51,7 +54,7 @@ h2 {
     align-items: center;
     column-gap: 1.5rem;
 
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Roboto Flex', sans-serif;
     font-size: 2rem;
 }
 
