--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zen+Loop&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
+
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
@@ -26,7 +31,7 @@ main {
     margin: 0px;
     background-color: #333;
     color: white;
-    font-family:Verdana, Geneva, Tahoma, sans-serif ;
+    font-family: 'Kanit', sans-serif;
     
 }
 
@@ -66,7 +71,7 @@ main {
 }
 
 h3 {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     font-size: 2rem;
 }
 
@@ -76,7 +81,8 @@ h3 {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Abel', sans-serif;
+    font-size: 1.5rem;
 }
 
 /* Name and ID */
@@ -101,18 +107,10 @@ h3 {
 }
 
 /* Types */
-.types {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-/* Abilities */
-.ables {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-/* All info text */
-.info {
-    font-size: 1.5rem;
+.types, .ables{
+    font-family: 'Zen Loop', cursive;
+    font-weight: 900;
+    font-size: 1.75rem;
 }
 
 @media screen and (max-width: 950px) {
