--- a/public/styles/timeline.css
+++ b/public/styles/timeline.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
+
 #timeline-items {
     display: flex;
     flex-direction: column;
@@ -27,7 +29,7 @@
     width: 70%;
     font-size: 1.425rem;
     font-weight: 520;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Cutive Mono', monospace;
 }
 
 .event-controls {
