--- a/public/styles/universal.css
+++ b/public/styles/universal.css
@@ -1,5 +1,8 @@
 /* All webpages */
 @import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
 
 html {
     width: 100%;
@@ -23,7 +26,7 @@ header {
 }
 
 h1 {
-    font-family: 'Franklin Gothic Medium';
+    font-family: 'Patrick Hand', cursive;
 }
 
 nav {
@@ -48,7 +51,8 @@ nav {
 
 .navlink {
     color: azure;
-    font-family: 'Lucida Sans Regular';
+    font-family: 'Quicksand', sans-serif;
+
 }
 
 a {
@@ -62,7 +66,7 @@ footer {
 }
 
 h5 {
-    font-family: 'Trebuchet MS';
+    font-family: 'Raleway', sans-serif;
 }
 
 main {
