--- a/views/receipts.ejs
+++ b/views/receipts.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="styles/receipts.css">
     <link rel="stylesheet" href="styles/universal-mq.css">
 </head>
+
 <body>
     <!-- Header -->
     <header>
@@ -46,33 +48,57 @@
 
     <!-- Receipts -->
     <main>
-        <h2>Your Orders (No refunds)</h2>
+        <h2>Your Orders! <i>(No refunds)</i></h2>
         <section id="orders">
-        <% data.forEach(order => { %>
-            <div class="single-order <%= order.orderStatus %>">
-                <div class="o-id"><%= order._id %></div>
-                <div class="o-timestamp"><%= order.createdAt %></div>
-                <div class="o-subtotal"><%= order.productsCost %></div>
-                <div class="o-tax"><%= order.taxCost * 100 %></div>
-                <div class="o-total"><%= order.totalCost %></div>
-                <div class="o-status"><%= order.orderStatus %></div>
-            </div>
-        <% }) %>
+            <% data.forEach(order=> { %>
+                <div class="single-order <%= order.orderStatus %>">
+                    <div class="cell empty">
+
+                    </div>
+                    <h4 class="cell o-timestamp">
+                        <%= order.createdAt.toLocaleString("en-GB", { dateStyle: "medium" , timeStyle: "short"})%>
+                    </h4>
+                    <div class="cell o-subtotal">
+                        <div class="label">Subtotal:</div>
+                        <div class="info">
+                            <%= order.productsCost.toLocaleString('en-GB', { style: 'currency' , currency: 'CAD' }) %>
+                        </div>
+                    </div>
+                    <div class="cell o-tax">
+                        <div class="label">Sales Tax:</div>
+                        <div class="info">
+                            <%= order.taxCost * 100 %>%
+                        </div>
+                    </div>
+                    <div class="cell o-total">
+                        <div class="label">Total:</div>
+                        <div class="info">
+                            <%= order.totalCost.toLocaleString('en-GB', { style: 'currency' , currency: 'CAD' }) %>
+                        </div>
+                    </div>
+                    <div class="cell o-status">
+                        <span class="status label">Status: </span>
+                        <span class="status info"><%= order.orderStatus[0].toUpperCase() +
+                            order.orderStatus.substring(1) %></span>
+                    </div>
+                </div>
+                <% }) %>
         </section>
     </main>
-    
+
     <!-- Footer -->
     <footer>
         <h5>
-            Copyright © FonseLULW; API from 
+            Copyright © FonseLULW; API from
             <a href="https://pokeapi.co">pokeAPI</a>
         </h5>
     </footer>
-    
+
     <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="/scripts/universal.js"></script>
     <script src="/scripts/events.js"></script>
     <script src="/scripts/receipts.js"></script>
 </body>
+
 </html>
