--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -62,3 +62,13 @@ h2 {
     border: none;
     font-size: 2rem;
 }
+
+#errMsg {
+    font-family: 'Nanum Gothic', sans-serif;
+    font-size: 1.25rem;
+    color: red;
+    
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
