--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,6 +29,7 @@
         <div id="loginform-container">
             <h2>Login to your account!</h2>
             <form id="loginForm" action="/auth/login" method="POST" autocomplete="off">
+                <div id="errMsg"><%= err %></div>
                 <div class="fields">
                     <label for="email">Email:</label>
                     <input name="email" type="email" class="textfields" autocomplete="off" required>
