Created a new route for a new game page - game.ejs, game.css, game.js, server.js

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -41,6 +41,9 @@
         <a class="navlink-container" id="receipts" href="/receipts">
             <span class="navlink">Receipts</span>
         </a>
+        <a class="navlink-container" id="play" href="/play">
+            <span class="navlink">Play</span>
+        </a>
         <a class="navlink-container" id="logout" href="/auth/logout">
             <span class="navlink">Logout</span>
         </a>
