--- a/views/game.ejs
+++ b/views/game.ejs
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedex-User! A01262284</title>
+    <title>Pokedex-Game! A01262284</title>
 
     <!-- Google Icons -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/styles/universal.css">
-    <link rel="stylesheet" href="/styles/user.css">
+    <link rel="stylesheet" href="/styles/game.css">
     <link rel="stylesheet" href="/styles/universal-mq.css">
 </head>
 
@@ -20,7 +20,7 @@
     <!-- Header -->
     <header>
         <h1>
-            Jose Alfonso Clarito - You!
+            Jose Alfonso Clarito - Game!
         </h1>
     </header>
 
@@ -44,7 +44,7 @@
         <a class="navlink-container" id="receipts" href="/receipts">
             <span class="navlink">Receipts</span>
         </a>
-        <a class="navlink-container" id="play" href="/play">
+        <a class="navlink-container" id="#" href="/play">
             <span class="navlink">Play</span>
         </a>
         <a class="navlink-container" id="logout" href="/auth/logout">
@@ -54,23 +54,7 @@
 
     <!-- Main -->
     <main id="content">
-        <div class="greeting">
-            <div>Welcome,
-                <span class="username">
-                    <%= data.username %>
-                </span>
-            </div>
-
-            <div>
-                <span class="password">
-                    <%= data.email %>
-                </span>
-            </div>
-        </div>
-
-        <button id="browse">
-            Browse for Pokemon!
-        </button>
+        Game Here!
     </main>
 
     <!-- Footer -->
@@ -85,7 +69,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="/scripts/universal.js"></script>
     <script src="/scripts/events.js"></script>
-    <script src="/scripts/user.js"></script>
+    <script src="/scripts/game.js"></script>
 </body>
 
 </html>
