--- a/views/receipts.ejs
+++ b/views/receipts.ejs
@@ -41,6 +41,9 @@
         <a class="navlink-container" id="receipts" href="/receipts">
             <span class="navlink">Receipts</span>
         </a>
+        <a class="navlink-container" id="play" href="/play">
+            <span class="navlink">Play</span>
+        </a>
         <a class="navlink-container" id="logout" href="/auth/logout">
             <span class="navlink">Logout</span>
         </a>
