--- a/views/game.ejs
+++ b/views/game.ejs
@@ -53,8 +53,10 @@
     </nav>
 
     <!-- Main -->
-    <main id="content">
-        Game Here!
+    <main>
+        <section id="game">
+            <div class="card"></div>
+        </section>
     </main>
 
     <!-- Footer -->
