Added a Reset Password button on admin dashboard

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -96,6 +96,9 @@
                             </label>
                         </span>
                     </div>
+                    <div class="a-reset">
+                        <button>Reset Password</button>
+                    </div>
                     <div class="a-delete">
                         <span class="material-symbols-outlined">
                             delete
