Rendered dashboard with user accounts data from the DB - dashboard.ejs, dashboard.js, dashboard.css, user.ejs, user.js, user.css, User.js, server.js

--- a/public/styles/user.css
+++ b/public/styles/user.css
@@ -17,8 +17,8 @@ main {
     justify-content: center;
 }
 
-#browse {
-    width: fit-content;
+button {
+    width: 25rem;
     padding-left: 1rem;
     padding-right: 1rem;
 }
