--- a/views/user.ejs
+++ b/views/user.ejs
@@ -71,6 +71,12 @@
         <button id="browse">
             Browse for Pokemon!
         </button>
+
+        <% if (data.admin) { %>
+        <button id="viewAccounts">
+            View All Accounts!
+        </button>
+        <% } %>
     </main>
 
     <!-- Footer -->
