--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -28,6 +28,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    height: 100%;
 }
 
 .status {
@@ -47,9 +48,14 @@
     box-sizing: border-box;
     justify-content: space-between;
     padding-left: 1rem;
-    padding-right: 1rem;
 }
 
 .back {
+    cursor: pointer;
+}
+
+.a-delete:hover {
+    transition: 1s;
+    background-color: rgb(249, 74, 74);
     cursor: pointer;
 }
