--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -161,6 +161,15 @@ button.disabled, input[type="submit"].disabled{
     width: fit-content;
 }
 
+.account-create {
+    padding: 0.25rem;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    height: fit-content;
+    width: fit-content;
+}
+
 @media screen and (max-width: 950px) {
     main {
         padding: 0px;
