--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -2,6 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Cantarell&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
 
+@keyframes shake {
+    0% { transform: translateX(8px); }
+    25% {transform: translateX(-8px);}
+    50% { transform: translateX(8px); }
+    75% {transform: translateX(-8px);}
+    100% {transform: translateX(0px);}
+}
+
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
@@ -139,10 +147,6 @@ button, input[type="submit"] {
     text-overflow: ellipsis;
 }
 
-.hidden {
-    display: none;
-}
-
 .disabled, input[type="submit"].disabled {
     color: rgba(0, 0, 0, 0.426);
 }
@@ -151,14 +155,18 @@ button.disabled, input[type="submit"].disabled{
     background-color: rgba(146, 146, 146, 0.539);   
 }
 
-.edit {
+.edit, .cancel {
     width: fit-content;
     overflow: revert;
 }
 
-.update {
+.update, .create {
     column-gap: 1rem;
     width: fit-content;
+}
+
+.create {
+    margin-right: 1rem;
 }
 
 .account-create {
@@ -168,6 +176,20 @@ button.disabled, input[type="submit"].disabled{
     justify-items: center;
     height: fit-content;
     width: fit-content;
+}
+
+.newEntry {
+    border-width: 0.25rem;
+    border-color: #333;
+    border-style: solid;
+}
+
+.hidden {
+    display: none;
+}
+
+.shaking {
+    animation: shake 0.3s;
 }
 
 @media screen and (max-width: 950px) {
