--- a/views/game.ejs
+++ b/views/game.ejs
@@ -78,14 +78,15 @@
 
             <div class="g-pokemons input-container">
                 <label for="pokes">Pokemons:</label>
-                <input type="number" name="pokes" class="field" min="1" required value="1">
+                <input type="number" name="pokes" class="field" min="1" max="2" required value="1" id="pokes">
             </div>
             
             <input class="g-submit" type="submit" value="Play!">
         </form>
-        <!-- <section id="game" class="content">
+
+        <section id="game" class="content hidden">
             <div class="card"></div>
-        </section> -->
+        </section>
     </main>
 
     <!-- Footer -->
