Implemented timer and game win/lose

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -84,6 +84,7 @@
             <input class="g-submit" type="submit" value="Play!">
         </form>
 
+        <div class="timer hidden" id="seconds-left"><span id="seconds">0</span> s</div>
         <section id="game" class="content hidden">
             <div class="card">REPLACE ME</div>
         </section>
