--- a/views/game.ejs
+++ b/views/game.ejs
@@ -84,7 +84,7 @@
             <input class="g-submit" type="submit" value="Play!">
         </form>
 
-        <div class="timer hidden" id="seconds-left"><span id="seconds">0</span> s</div>
+        <h3 class="timer hidden" id="seconds-left">Time left: <span id="seconds">0</span> s</h3>
         <section id="game" class="content hidden">
             <div class="card">REPLACE ME</div>
         </section>
