--- a/views/game.ejs
+++ b/views/game.ejs
@@ -85,6 +85,7 @@
         </form>
 
         <h3 class="timer hidden" id="seconds-left">Time left: <span id="seconds">0</span> s</h3>
+        <h3 class="msg hidden" id="end-msg"></h3>
         <section id="game" class="content hidden">
             <div class="card">REPLACE ME</div>
         </section>
